이사준비 추가

--- a/src/main/resources/templates/searchheader.html
+++ b/src/main/resources/templates/searchheader.html
@@ -1,8 +1,5 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page import="com.DAO.UserDAO" %>
-<%@ page import="com.DTO.UserDTO" %>
-<%@ page import="com.util.LoginService" %>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <html>
 <head>
