정적 컨텐츠 수정

--- a/src/main/resources/templates/common/mailForm.html
+++ b/src/main/resources/templates/common/mailForm.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../assets/css/style.css?after" rel="stylesheet"/>
+    <link href="../../static/assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../static/assets/css/style.css?after" rel="stylesheet"/>
     <link href="commonstyle.css?after" rel="stylesheet"/>
 
     <title>메일 템플릿</title>
