--- a/src/main/resources/templates/fragments/searchheader.html
+++ b/src/main/resources/templates/fragments/searchheader.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/default_layout">
 
-<html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
-
+<th:block layout:fragment="searchheader">
 <header class="p-3">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -26,8 +27,8 @@
             <div class="dropdown text-end">
 
                 <!--로그인이 안되면 로그인과 회원가입을 보여줌-->
-                <c:choose>
-                    <c:when test="${empty sessionScope.u_id}">
+<!--                <c:choose>-->
+<!--                    <c:when test="${empty sessionScope.u_id}">-->
                         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle text-dark"></i>
                         </a>
@@ -36,30 +37,35 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="../../join/join.do">회원가입</a></li>
                         </ul>
-                    </c:when>
+<!--                    </c:when>-->
 
 
-                    <c:otherwise>
-                        <!--로그인이 되면 마이페이지와 로그아웃을 보여줌-->
-                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <c:choose>
-                                <c:when test="${not empty sessionScope.u_sfile}">
-                                    <!--프로필 사진이 있다면 보여주고-->
-                                    <img src="../../../upload/${sessionScope.u_sfile}" alt="mdo" width="40" height="40" class="rounded-circle">
-                                </c:when>
-                                <c:otherwise>
-                                    <!-- 아니라면 빈 사진을 보여준다-->
-                                    <img src="../resources/assets/img/no_profimg.png" alt="mdo" width="40" height="40" class="rounded-circle" />
-                                </c:otherwise>
-                            </c:choose>
-                        </a>
-                        <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="../../mypage.do">마이페이지</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="../../logout.do">로그아웃</a></li>
-                        </ul>
-                    </c:otherwise>
-                </c:choose>
+<!--                    <c:otherwise>-->
+<!--                        &lt;!&ndash;로그인이 되면 마이페이지와 로그아웃을 보여줌&ndash;&gt;-->
+<!--                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--                            <c:choose>-->
+<!--                                <c:when test="${not empty sessionScope.u_sfile}">-->
+<!--                                    &lt;!&ndash;프로필 사진이 있다면 보여주고&ndash;&gt;-->
+<!--                                    <img src="../../../upload/${sessionScope.u_sfile}" alt="mdo" width="40" height="40" class="rounded-circle">-->
+<!--                                </c:when>-->
+<!--                                <c:otherwise>-->
+<!--                                    &lt;!&ndash; 아니라면 빈 사진을 보여준다&ndash;&gt;-->
+<!--                                    <img src="../resources/assets/img/no_profimg.png" alt="mdo" width="40" height="40" class="rounded-circle" />-->
+<!--                                </c:otherwise>-->
+<!--                            </c:choose>-->
+<!--                        </a>-->
+<!--                        <ul class="dropdown-menu text-small" style="">-->
+<!--                            <li><a class="dropdown-item" href="../../mypage.do">마이페이지</a></li>-->
+<!--                            <li><hr class="dropdown-divider"></li>-->
+<!--                            <li><a class="dropdown-item" href="../../logout.do">로그아웃</a></li>-->
+<!--                        </ul>-->
+<!--                    </c:otherwise>-->
+<!--                </c:choose>-->
+
+
+
+
+
             </div>
         </div>
     </div>
@@ -120,26 +126,26 @@
 <!--end swiper-->
 
 
-<%--검색창 삭제-->
-<%--    <div class="container position-relative">--%>
-    <%--        <div class="row justify-content-center">--%>
-        <%--            <div class="col-xl-8">--%>
-            <%--                <div class="text-center text-white">--%>
-                <%--                    <form class="form-subscribe" id="searchForm">--%>
-                    <%--                        <!-- 여행지 검색창 input-->--%>
-                    <%--                        <div class="row">--%>
-                        <%--                            <div class="col">--%>
-                            <%--                                <input class="form-control form-control-lg" id="searchInput" placeholder="Coming Soon..."/>--%>
-                            <%--                            </div>--%>
-                        <%--                            <div class="col-auto"><button class="btn btn-primary btn-lg" id="searchButton" type="submit">검색</button></div>--%>
-                        <%--                        </div>--%>
-                    <%--                    </form>--%>
-                <%--                </div>--%>
-            <%--            </div>--%>
-        <%--        </div>--%>
-    <%--    </div>--%>
+<!--검색창 삭제-->
+    <div class="container position-relative">
+            <div class="row justify-content-center">
+                    <div class="col-xl-8">
+                            <div class="text-center text-white">
+                                    <form class="form-subscribe" id="searchForm">
+                                            <!-- 여행지 검색창 input-->
+                                            <div class="row">
+                                                    <div class="col">
+                                                            <input class="form-control form-control-lg" id="searchInput" placeholder="Coming Soon..."/>
+                                                        </div>
+                                                    <div class="col-auto"><button class="btn btn-primary btn-lg" id="searchButton" type="submit">검색</button></div>
+                                                </div>
+                                        </form>
+                                </div>
+                        </div>
+                </div>
+        </div>
 </div>
-
+</th:block>
 <script>
     new Swiper("#swiper-1",{
         autoplay:{
@@ -158,4 +164,5 @@
     });
 </script>
 </body>
+
 </html>
