--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,15 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page import="com.DAO.UserDAO" %>
-<%@ page import="com.DTO.UserDTO" %>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
 <header class="p-3">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="../../proj/views/index.jsp" class="navbar-brand d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
+            <a href="/index" class="navbar-brand d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
                 <i class="bi bi-pin-map-fill m-auto text-dark"></i>
             </a>
 
@@ -27,8 +26,8 @@
             <div class="dropdown text-end">
 
                 <!--로그인이 안되면 로그인과 회원가입을 보여줌-->
-                <c:choose>
-                    <c:when test="${empty sessionScope.u_id}">
+<!--                <c:choose>-->
+<!--                    <c:when test="${empty sessionScope.u_id}">-->
                         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle text-dark"></i>
                         </a>
@@ -37,30 +36,30 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="../../join/join.do">회원가입</a></li>
                         </ul>
-                    </c:when>
+<!--                    </c:when>-->
 
 
-                    <c:otherwise>
+<!--                    <c:otherwise>-->
                         <!--로그인이 되면 마이페이지와 로그아웃을 보여줌-->
-                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <c:choose>
-                                <c:when test="${not empty sessionScope.u_sfile}">
-                                    <!--프로필 사진이 있다면 보여주고-->
-                                    <img src="../../../upload/${sessionScope.u_sfile}" alt="mdo" width="40" height="40" class="rounded-circle">
-                                </c:when>
-                                <c:otherwise>
-                                    <!-- 아니라면 빈 사진을 보여준다-->
-                                    <img src="../proj/resources/assets/img/no_profimg.png" alt="mdo" width="40" height="40" class="rounded-circle" />
-                                </c:otherwise>
-                            </c:choose>
-                        </a>
-                        <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="../../mypage.do">마이페이지</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="../../logout.do">로그아웃</a></li>
-                        </ul>
-                    </c:otherwise>
-                </c:choose>
+<!--                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--                            <c:choose>-->
+<!--                                <c:when test="${not empty sessionScope.u_sfile}">-->
+<!--                                    &lt;!&ndash;프로필 사진이 있다면 보여주고&ndash;&gt;-->
+<!--                                    <img src="../../../upload/${sessionScope.u_sfile}" alt="mdo" width="40" height="40" class="rounded-circle">-->
+<!--                                </c:when>-->
+<!--                                <c:otherwise>-->
+<!--                                    &lt;!&ndash; 아니라면 빈 사진을 보여준다&ndash;&gt;-->
+<!--                                    <img src="../proj/resources/assets/img/no_profimg.png" alt="mdo" width="40" height="40" class="rounded-circle" />-->
+<!--                                </c:otherwise>-->
+<!--                            </c:choose>-->
+<!--                        </a>-->
+<!--                        <ul class="dropdown-menu text-small" style="">-->
+<!--                            <li><a class="dropdown-item" href="../../mypage.do">마이페이지</a></li>-->
+<!--                            <li><hr class="dropdown-divider"></li>-->
+<!--                            <li><a class="dropdown-item" href="../../logout.do">로그아웃</a></li>-->
+<!--                        </ul>-->
+<!--                    </c:otherwise>-->
+<!--                </c:choose>-->
             </div>
         </div>
     </div>
