--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -12,20 +12,19 @@
     <!-- jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../../proj/resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../proj/resources/assets/css/style.css?after" rel="stylesheet" />
-    <link href="../proj/views/common/commonstyle.css?after" rel="stylesheet"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css?after" rel="stylesheet" />
+    <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
     <title>회원가입</title>
     <link rel = "icon" href="image/wave.ico">
 
-    <!-- 자바스크립트(유효성검사 해당) -->
-    <%--    <script src ="signUpjs3.js"></script>--%>
 </head>
 <body>
 
-<%--<c:if test="${ joinResult == 0}"></c:if>--%>
+<!--<c:if test="${ joinResult == 0}"></c:if>-->
+<!--header-->
+<th:block th:replace="fragments/header"></th:block>
 
-<jsp:include page="../common/header.jsp"/>
 <div class="sub-header">
     <div class="container pt-5 pl-5">
         <h3 class="display-6 text-white">마이페이지</h3>
@@ -51,10 +50,10 @@
                         <input type="text" name="id" class="form-control form-control-sm" maxlength="20" placeholder="아이디를 입력하세요."/>
                         <!--아이디 중복확인-->
                         <input type="button" value="중복 확인" class="btn btn-primary btn-sm" id="idCheckBtn">
-                        <%--                    <!--아이디 중복확인-->--%>
-                        <%--                        <button type="button" onclick="joinUser()" name="dbCheckId" class="btn btn-primary btn-sm">중복 확인</button>--%>
-                        <%--                        <button type="button" onclick="checkDuplicateId()" name="dbCheckId" class="btn btn-primary btn-sm">중복 확인</button>--%>
-                        <%--                        <input type="hidden" name="idDuplication" value="idUncheck"/>--%>
+                        <!--아이디 중복확인-->
+<!--                        <button type="button" onclick="joinUser()" name="dbCheckId" class="btn btn-primary btn-sm">중복 확인</button>-->
+<!--                        <button type="button" onclick="checkDuplicateId()" name="dbCheckId" class="btn btn-primary btn-sm">중복 확인</button>-->
+<!--                        <input type="hidden" name="idDuplication" value="idUncheck"/>-->
                     </div>
                 </div>
 
@@ -89,7 +88,7 @@
                     </div>
                 </div>
 
-                <%-- 가입버튼--%>
+                <!-- 가입버튼-->
                 <div class="col text-center mb-5">
                     <input type="submit" value="가입" id="joinBtn" class="btn btn-primary btn-md">
                 </div>
@@ -98,7 +97,7 @@
     </form>
 </div>
 <!--footer-->
-<jsp:include page="../common/footer.jsp"/>
+<th:block th:replace="fragments/footer"></th:block>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
