매핑 연결 중

--- a/src/main/resources/templates/fragments/searchheader.html
+++ b/src/main/resources/templates/fragments/searchheader.html
@@ -32,7 +32,7 @@
                             <i class="bi bi-person-circle text-dark"></i>
                         </a>
                         <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="../../login.do">로그인</a></li>
+                            <li><a class="dropdown-item" href="/login">로그인</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/join">회원가입</a></li>
                         </ul>
