--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,18 +10,15 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../../proj/resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../proj/resources/assets/css/style.css" rel="stylesheet" />
-    <link href="../proj/views/common/commonstyle.css?after" rel="stylesheet"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>로그인</title>
     <link rel = "icon" href="image/wave.ico">
 
-    <!-- 자바스크립트(유효성검사 해당) -->
-    <script src ="signUpjs3.js"></script>
-    <!-- 다음 우편번호찾기 API -->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
 </head>
 <body>
 <script>
@@ -63,7 +60,7 @@
 </style>
 
 <!-- header-->
-<jsp:include page="../common/header.jsp"/>
+<th:block th:replace="fragments/header"></th:block>
 <div class="sub-header">
     <div class="container pt-5 pl-5">
         <h3 class="display-6 text-white">로그인</h3>
@@ -77,17 +74,17 @@
         </div>
 
 
-        <%--아이디--%>
+        <!--아이디-->
         <div class="userInput mb-5">
             <h4 class="list">아이디</h4>
             <input type="text" name="u_id" class="form-control form-control-sm" maxlength="20" placeholder="아이디를 입력하세요."><br/>
         </div>
-        <%--비밀번호--%>
+        <!--비밀번호-->
         <div class="userInput mb-5">
             <h4 class="list">비밀번호</h4>
             <input type="password" name="u_pw" class="form-control form-control-sm" maxlength="20" placeholder="비밀번호를 입력하세요."><br/>
         </div>
-        <%--    로그인 버튼--%>
+        <!--로그인 버튼-->
         <div class="col text-center">
             <input type="hidden" name="prevUrl" value="">
             <input type="submit" value="로그인" class="btn btn-primary btn-md"><br/>
@@ -101,7 +98,7 @@
 
 
 <!--footer-->
-<jsp:include page="../common/footer.jsp"/>
+<th:block th:replace="fragments/footer"></th:block>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
