매핑 연결 중(마이페이지)

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -160,7 +160,7 @@ a {
     height: 200px;
     position: relative;
     overflow: hidden;
-    background-image: url("../../../../proj/resources/assets/img/mainimg/daejeon.jpg");
+    background-image: url("../img/mainimg/daejeon.jpg");
 }
 
 /*마이페이지*/
