--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
 <head>
     <meta charset="UTF-8">
     <!-- Google fonts-->
@@ -12,15 +11,15 @@
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../../../proj/resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../../proj/resources/assets/css/style.css?after" rel="stylesheet" />
-    <link href="../../proj/views/common/commonstyle.css?after" rel="stylesheet"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css?after" rel="stylesheet" />
+    <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
 
     <title>마이페이지</title>
 </head>
 <body>
 <!-- header-->
-<jsp:include page="../common/header.jsp"/>
+<th:block th:replace="fragments/header"></th:block>
 <div class="sub-header">
     <div class="container pt-5 pl-5">
         <h3 class="display-6 text-white">마이페이지</h3>
@@ -162,7 +161,7 @@
 </div>
 
 <!--footer-->
-<jsp:include page="../common/footer.jsp"/>
+<th:block th:replace="fragments/footer"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
