--- a/src/main/resources/templates/tourInfo/area.html
+++ b/src/main/resources/templates/tourInfo/area.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
+
 <head>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -8,9 +8,9 @@
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
     <!--css-->
-    <link href="../../../proj/resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../../proj/resources/assets/css/style.css?after" rel="stylesheet" />
-    <link href="../../../proj/views/common/commonstyle.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css?after" rel="stylesheet" />
+    <link href="assets/css/commonstyle.css" rel="stylesheet" />
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>관광지 정보 | 3GO</title>
@@ -36,77 +36,77 @@
         }
 
         .b1 {
-            background: url("../../../proj/resources/assets/img/mainimg/seoul.jpeg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/mainimg/seoul.jpeg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b2 {
-            background: url("../../../proj/resources/assets/img/subimg/busan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/busan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b3 {
-            background: url("../../../proj/resources/assets/img/subimg/jeju.jpg") 50% 80% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/jeju.jpg") 50% 80% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b4 {
-            background: url("../../../proj/resources/assets/img/subimg/daejeon.jpg") 50%  no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/daejeon.jpg") 50%  no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b5 {
-            background: url("../../../proj/resources/assets/img/subimg/daegu.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/daegu.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b6 {
-            background: url("../../../proj/resources/assets/img/subimg/gyunggi.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/gyunggi.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b7 {
-            background: url("../../../proj/resources/assets/img/subimg/gwangju.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/gwangju.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b8 {
-            background: url("../../../proj/resources/assets/img/subimg/gangwon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/gangwon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b9 {
-            background: url("../../../proj/resources/assets/img/subimg/ulsan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/ulsan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b10 {
-            background: url("../../../proj/resources/assets/img/mainimg/incheon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/mainimg/incheon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b11 {
-            background: url("../../../proj/resources/assets/img/mainimg/sejong.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/mainimg/sejong.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b12 {
-            background: url("../../../proj/resources/assets/img/subimg/chungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/chungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b13 {
-            background: url("../../../proj/resources/assets/img/subimg/chungnam.jpg") 50% 70% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/chungnam.jpg") 50% 70% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b14 {
-            background: url("../../../proj/resources/assets/img/subimg/gyungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/gyungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b15 {
-            background: url("../../../proj/resources/assets/img/subimg/gyungnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/gyungnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b16 {
-            background: url("../../../proj/resources/assets/img/subimg/jeonbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/jeonbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b17 {
-            background: url("../../../proj/resources/assets/img/subimg/jeonnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("assets/img/subimg/jeonnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
@@ -139,7 +139,8 @@
 </head>
 <body>
 <!-- header-->
-<jsp:include page="../common/header.jsp"/>
+<th:block th:replace="fragments/header"></th:block>
+
 
 <div class="sub-header">
     <div class="container pt-5 pl-5">
@@ -151,13 +152,13 @@
 <div class="container mt-5">
     <h2 id="test">여행을 떠날 지역을 골라보세요!</h2>
     <div id="area">
-        <%--            <table border="1" width="70%" align="center">--%>
-        <%--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
+        <!--           <table border="1" width="70%" align="center"> -->
+        <!--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
             <%--                    <c:if test="${idx.index % 3 == 0}"><tr></c:if>--%>
             <%--                    <td><a href="../info/city.do?area=${area.j_areacode}">${area.j_area_name}</a></td>--%>
             <%--                    <c:if test="${idx.index % 3 == 2}"></tr></c:if>--%>
             <%--                </c:forEach>--%>
-        <%--            </table>--%>
+        <%--            </table>-->
 
 
 
@@ -273,7 +274,8 @@
     </div>
 </div>
 <!--footer-->
-<jsp:include page="../common/footer.jsp"/>
+<th:block th:replace="fragments/footer"></th:block>
+
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
