--- a/src/main/resources/templates/tourInfo/city.html
+++ b/src/main/resources/templates/tourInfo/city.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
+
 <head>
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
@@ -298,7 +298,7 @@
 </head>
 <body>
 <!-- header-->
-<jsp:include page="../common/header.jsp"/>
+<th:block th:replace="fragments/header"></th:block>
 <div id="wrap">
     <div class="flex-box">
         <h2 id="areaName">${areaName}</h2>
@@ -358,7 +358,7 @@
     </div>
 </div>
 <!--footer-->
-<jsp:include page="../common/footer.jsp"/>
+<th:block th:replace="fragments/footer"></th:block>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
