스프링 시큐리티 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -271,7 +271,7 @@
 </section>
 
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 
 <!-- Bootstrap core JS-->
