--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 <div class="sub-header">
     <div class="container pt-5 pl-5">
         <h3 class="display-6 text-white">마이페이지</h3>
@@ -161,7 +161,7 @@
 </div>
 
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
