--- a/src/main/resources/templates/tourInfo/area.html
+++ b/src/main/resources/templates/tourInfo/area.html
@@ -139,7 +139,7 @@
 </head>
 <body>
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 
 
 <div class="sub-header">
@@ -274,7 +274,7 @@
     </div>
 </div>
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
