--- a/src/main/resources/templates/tourInfo/content.html
+++ b/src/main/resources/templates/tourInfo/content.html
@@ -700,7 +700,7 @@
     <div><img src="../../../proj/resources/assets/img/loading.gif" /></div>
 </div>
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 <div id="wrap">
     <div class="container-fluid">
         <div class="row">
@@ -775,7 +775,7 @@
     </div>
 </div>
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6a523b773771c7b31ef741ad7e52ee9c"></script>
 <script>
