--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,7 +60,7 @@
 </style>
 
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 <div class="sub-header">
     <div class="container pt-5 pl-5">
         <h3 class="display-6 text-white">로그인</h3>
@@ -98,7 +98,7 @@
 
 
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
