--- a/src/main/resources/templates/tourInfo/city.html
+++ b/src/main/resources/templates/tourInfo/city.html
@@ -298,7 +298,7 @@
 </head>
 <body>
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 <div id="wrap">
     <div class="flex-box">
         <h2 id="areaName">${areaName}</h2>
@@ -358,7 +358,7 @@
     </div>
 </div>
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
