이름 수정 및 조인 관련

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -164,7 +164,7 @@
 
     document.getElementById('idCheckBtn').addEventListener('click',function() {
         $.ajax({
-            url: '/validation.do',
+            url: '/checkDuplicateId',
             type: 'GET',
             data : {
                 inputId : $('input[name=id]').val(),
