--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -7,9 +7,9 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../../../proj/resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../../proj/resources/assets/css/style.css?after" rel="stylesheet" />
-    <link href="../../../proj/views/common/commonstyle.css?after" rel="stylesheet" />
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../assets/css/style.css?after" rel="stylesheet" />
+    <link href="../../common/commonstyle.css?after" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- toast grid -->
     <script type="text/javascript" src="https://uicdn.toast.com/tui.pagination/latest/tui-pagination.js"></script>
