--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -380,9 +380,10 @@
 
 <form name="writeFrm">
   <div class="container position-relative pt-5 pb-5">
+    <input type="hidden" id="board-id" th:value="${board.BId}">
     <!--글 제목-->
     <div class="jumbotron">
-      <h3 class="display-4">${dto.b_title}</h3>
+      <h3 class="display-4" th:text="${board.BTitle}"></h3>
     </div>
 
     <!--글 정보-->
@@ -391,13 +392,13 @@
         <div class="row">
           <div class="col">
           </div>
-          <div class="col-md-auto">
+          <div class="col-md-auto" th:text="${board.userName}">
             <i class="bi bi-person"></i> &nbsp;&nbsp; ${dto.u_name}
           </div>
-          <div class="col-md-auto">
+          <div class="col-md-auto" th:text="${board.BPostdate}">
             <i class="bi bi-calendar"></i> &nbsp;&nbsp; ${dto.b_postdate}
           </div>
-          <div class="col-md-auto">
+          <div class="col-md-auto" th:text="${board.visitCount}">
             <i class="bi bi-eye"></i> &nbsp;&nbsp; ${dto.b_visitcount}
           </div>
         </div>
@@ -407,7 +408,7 @@
 
 
       <!--글 내용-->
-      <p>
+      <p th:text="${board.BContent}">
         <c:if test="${not empty dto.b_ofile and isImage == true}">
           <img src="../../../upload/${dto.b_sfile}" style="max-width: 100%"/>
         </c:if>
@@ -446,7 +447,7 @@
     <div class="text-center">
       <div class="btn-group pt-5" role="group" aria-label="Basic example">
         <c:if test="${not empty sessionScope.u_id and sessionScope.u_id eq dto.u_id}">
-          <button type="button" class="btn btn-primary btn-sm" onclick="location.href='../community/edit.do?mode=edit&b_id=${param.b_id}';">수정</button>
+          <button type="button" id="modify-btn" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/write?b_id={bId}(bId=${board.BId})}'|">수정</button>
           <button type="button" id="delete-btn" class="btn btn-primary btn-sm">삭제</button>
         </c:if>
 
@@ -534,5 +535,6 @@
 <th:block th:replace="~{fragments/footer}"></th:block>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
