--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -56,63 +56,65 @@
     <!-- header-->
     <th:block th:replace="~{fragments/header}"></th:block>
 
-<div class="sub-header">
-    <div class="container pt-5 pl-5">
-        <h3 class="display-6 text-white">게시판</h3>
+    <div class="sub-header">
+        <div class="container pt-5 pl-5">
+            <h3 class="display-6 text-white">게시판</h3>
+        </div>
     </div>
-</div>
 
 
-<div class="container position-relative pt-5 pb-5">
-    <form id="writeFrm" name="writeFrm" method="post" enctype="multipart/form-data" onsubmit="return validateForm();">
+    <div class="container position-relative pt-5 pb-5">
+        <article>
+        <!--    <form id="writeFrm" name="writeFrm" method="post" enctype="multipart/form-data" onsubmit="return validateForm();">-->
+        <input type="hidden" id="board-id" th:value="${board.BId}">
 
-        <c:if test="${not empty sessionScope.u_id}">
-            <input type="hidden" id="board-id" th:value="${board.BId}">
-
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">작성자</label>
-                <div class="col-sm-10">
-                    <input type="text" name="u_name" class="form-control form-control-sm" value="${u_name}" />
-                </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">작성자</label>
+            <div class="col-sm-10">
+                <input type="text" name="u_name" class="form-control form-control-sm" th:value="${board.userName}" />
             </div>
-
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">제목</label>
-                <div class="col-sm-10">
-                    <div id="alert-text"></div>
-                    <input type="text" id="b_title" name="b_title" class="form-control form-control-sm" maxlength="20" placeholder="제목을 입력하세요." oninput="checkTitleLength()"/>
-                </div>
+        </div>
+        +
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">제목</label>
+            <div class="col-sm-10">
+                <div id="alert-text"></div>
+                <input type="text" id="b_title" name="b_title" class="form-control form-control-sm" maxlength="20" placeholder="제목을 입력하세요." oninput="checkTitleLength()" th:value="${board.BTitle}"/>
             </div>
+        </div>
 
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">내용</label>
-                <div class="col-sm-10">
-                    <textarea id="b_content" name="b_content" class="form-control" placeholder="내용을 입력하세요" rows="5" ></textarea>
-                </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">내용</label>
+            <div class="col-sm-10">
+                <textarea id="b_content" name="b_content" class="form-control" placeholder="내용을 입력하세요" rows="5" th:text="${board.BContent}"></textarea>
             </div>
+        </div>
 
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">첨부 파일</label>
-                <div class="col-sm-10">
-                    <input type="file" name="b_ofile"/>
-                </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">첨부 파일</label>
+            <div class="col-sm-10">
+                <input type="file" name="b_ofile"/>
             </div>
+        </div>
 
-            <div class="text-center">
-                <div class="btn-group pt-5" role="group" aria-label="Basic example">
-                    <button type="submit" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/view/b_id={bId}(bId=${board.BId})}'|">작성완료</button>
-                    <button type="reset" class="btn btn-secondary btn-sm">다시입력</button>
-                    <button type="button" class="btn btn-secondary btn-sm" onclick="location.href='/board';">목록보기</button>
-                </div>
+        <div class="text-center">
+            <div class="btn-group pt-5" role="group" aria-label="Basic example">
+
+                <button th:if="${board.BId} != null" id="modify-btn" type="button" class="btn btn-primary btn-sm">수정</button>
+                <button th:if="${board.BId} == null" id="create-btn" type="button" class="btn btn-primary btn-sm">등록</button>
+                <button type="reset" class="btn btn-secondary btn-sm">다시입력</button>
+                <button type="button" class="btn btn-secondary btn-sm" onclick="location.href='/board';">목록보기</button>
             </div>
-        </c:if>
-    </form>
-</div>
+        </div>
+        </article>
+    </div>
 
     <!--footer-->
     <th:block th:replace="~{fragments/footer}"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!--js-->
+<script src="../assets/js/board.js"></script>
 </body>
 </html>
