--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--jquery-->
+    <script	src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Bootstrap icons-->
@@ -20,6 +23,300 @@
 </head>
 <body>
 
+<script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        initTmap();
+    })
+
+    // tmap api
+    var map;
+
+    var marker_s, marekr_e, waypoint;
+    var resultMarkerArr = [];
+    //경로그림정보
+    var drawInfoArr = [];
+    var resultInfoArr = [];
+
+    function initTmap(){
+        resultMarkerArr = [];
+
+        // 1. 지도 띄우기
+        map = new Tmapv2.Map("map_div", {
+            center: new Tmapv2.LatLng(37.405278291509404, 127.12074279785197),
+            width : "100%",
+            height : "100%",
+            zoom : 14,
+            zoomControl : true,
+            scrollwheel : true
+
+        });
+
+        // 2. 시작, 도착 심볼찍기
+        // 시작
+        marker_s = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.402688, 127.103259),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_s.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker_s);
+        // 도착
+        marker_e = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.414382, 127.142571),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_e.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker_e);
+
+        // 3. 경유지 심볼 찍기
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.399569, 127.103790),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_1.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.402748, 127.108913),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_2.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.397153, 127.113403),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_3.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.410135, 127.121210),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_4.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.399400, 127.123296),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_5.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.406327, 127.130933),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_6.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        marker = new Tmapv2.Marker({
+            position : new Tmapv2.LatLng(37.413227, 127.127337),
+            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_7.png",
+            iconSize : new Tmapv2.Size(24, 38),
+            map:map
+        });
+        resultMarkerArr.push(marker);
+
+        // 4. 경로탐색 API 사용요청
+        var routeLayer;
+        $("#btn_select").click(function(){
+
+            var searchOption = $("#selectLevel").val();
+
+            var headers = {};
+            headers["appKey"]="aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf";
+            headers["Content-Type"]="application/json";
+
+            var param = JSON.stringify({
+                "startName" : "출발지",
+                "startX" : "127.103259",
+                "startY" : "37.402688",
+                "startTime" : "201708081103",
+                "endName" : "도착지",
+                "endX" : "127.142571",
+                "endY" : "37.414382",
+                "viaPoints" :
+                    [
+                        {
+                            "viaPointId" : "test01",
+                            "viaPointName" : "name01",
+                            "viaX" : "127.103790" ,
+                            "viaY" : "37.399569"
+                        },
+                        {
+                            "viaPointId" : "test02",
+                            "viaPointName" : "name02",
+                            "viaX" : "127.108913" ,
+                            "viaY" : "37.402748"
+                        },
+                        {
+                            "viaPointId" : "test03",
+                            "viaPointName" : "name03",
+                            "viaX" : "127.113403" ,
+                            "viaY" : "37.397153"
+                        },
+                        {
+                            "viaPointId" : "test04",
+                            "viaPointName" : "name04",
+                            "viaX" : "127.121210" ,
+                            "viaY" : "37.410135"
+                        },
+                        {
+                            "viaPointId" : "test05",
+                            "viaPointName" : "name05",
+                            "viaX" : "127.123296" ,
+                            "viaY" : "37.399400"
+                        },
+                        {
+                            "viaPointId" : "test06",
+                            "viaPointName" : "name06",
+                            "viaX" : "127.130933" ,
+                            "viaY" : "37.406327"
+                        },
+                        {
+                            "viaPointId" : "test07",
+                            "viaPointName" : "name07",
+                            "viaX" : "127.127337" ,
+                            "viaY" : "37.413227"
+                        }
+                    ],
+                "reqCoordType" : "WGS84GEO",
+                "resCoordType" : "EPSG3857",
+                "searchOption": searchOption
+            });
+
+            $.ajax({
+                method:"POST",
+                url:"https://apis.openapi.sk.com/tmap/routes/routeSequential30?version=1&format=json",//
+                headers : headers,
+                async:false,
+                data:param,
+                success:function(response){
+
+                    var resultData = response.properties;
+                    var resultFeatures = response.features;
+
+                    // 결과 출력
+                    var tDistance = "총 거리 : " + (resultData.totalDistance/1000).toFixed(1) + "km,  ";
+                    var tTime = "총 시간 : " + (resultData.totalTime/60).toFixed(0) + "분,  ";
+                    var tFare = "총 요금 : " + resultData.totalFare + "원";
+
+                    $("#result").text(tDistance+tTime+tFare);
+
+                    //기존  라인 초기화
+
+                    if(resultInfoArr.length>0){
+                        for(var i in resultInfoArr){
+                            resultInfoArr[i].setMap(null);
+                        }
+                        resultInfoArr=[];
+                    }
+
+                    for(var i in resultFeatures) {
+                        var geometry = resultFeatures[i].geometry;
+                        var properties = resultFeatures[i].properties;
+                        var polyline_;
+
+                        drawInfoArr = [];
+
+                        if(geometry.type == "LineString") {
+                            for(var j in geometry.coordinates){
+                                // 경로들의 결과값(구간)들을 포인트 객체로 변환
+                                var latlng = new Tmapv2.Point(geometry.coordinates[j][0], geometry.coordinates[j][1]);
+                                // 포인트 객체를 받아 좌표값으로 변환
+                                var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(latlng);
+                                // 포인트객체의 정보로 좌표값 변환 객체로 저장
+                                var convertChange = new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng);
+
+                                drawInfoArr.push(convertChange);
+                            }
+
+                            polyline_ = new Tmapv2.Polyline({
+                                path : drawInfoArr,
+                                strokeColor : "#FF0000",
+                                strokeWeight: 6,
+                                map : map
+                            });
+                            resultInfoArr.push(polyline_);
+
+                        }else{
+                            var markerImg = "";
+                            var size = "";			//아이콘 크기 설정합니다.
+
+                            if(properties.pointType == "S"){	//출발지 마커
+                                markerImg = "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_s.png";
+                                size = new Tmapv2.Size(24, 38);
+                            }else if(properties.pointType == "E"){	//도착지 마커
+                                markerImg = "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_e.png";
+                                size = new Tmapv2.Size(24, 38);
+                            }else{	//각 포인트 마커
+                                markerImg = "http://topopen.tmap.co.kr/imgs/point.png";
+                                size = new Tmapv2.Size(8, 8);
+                            }
+
+                            // 경로들의 결과값들을 포인트 객체로 변환
+                            var latlon = new Tmapv2.Point(geometry.coordinates[0], geometry.coordinates[1]);
+                            // 포인트 객체를 받아 좌표값으로 다시 변환
+                            var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(latlon);
+
+                            marker_p = new Tmapv2.Marker({
+                                position: new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng),
+                                icon : markerImg,
+                                iconSize : size,
+                                map:map
+                            });
+
+                            resultMarkerArr.push(marker_p);
+                        }
+                    }
+                },
+                error:function(request,status,error){
+                    console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+                }
+            });
+        });
+    }
+
+    function addComma(num) {
+        var regexp = /\B(?=(\d{3})+(?!\d))/g;
+        return num.toString().replace(regexp, ',');
+    }
+
+    // 아이콘 누르면 장소 담기에 추가하는 함수
+    $(document).ready(function() {
+        $('.plus').click(function() {
+            const areaname = $(this).prev('strong').text();
+            console.log(areaname);
+            $("#areabox").append("<a href='#' class='list-group-item list-group-item-action py-3 lh-tight' aria-current='true'> <div class='d-flex w-100 align-items-center justify-content-between'> <strong class='mb-1'>" + areaname + "</strong> <button class='delete' type='button' onclick='deleteRow(this);'><i class='bi bi-x-circle'></i></button> </div> </a>")
+        })
+    })
+
+    // 담은 아이템 지우는 함수
+    function deleteRow(ths) {
+        var ths = $(ths);
+        ths.closest("a").remove();
+    }
+
+    // 날짜 접는 함수
+    function toggleDay(ths) {
+        var ths = $(ths);
+        var parents = ths.closest('.d-flex');
+        parents.toggle();
+        $('#map').toggleClass('.hide');
+    }
+</script>
+
+
 <!--계획 화면에선 헤더가 안들어가야됨-->
 
 <!--이전 화면에서 input 값으로 여행 start day와 여행 end day 값을 가지고 옵니다. (start day가 더 작은지에 대한 유효성 검사가 필요합니다.)-->
@@ -36,7 +333,7 @@
         overflow-y: auto;
         height: calc(100vh - 79px);
     }
-    .test {
+    .show {
         width: calc(100% - 872px);
         /* 담은 장소를 못보게 하면 이 너비여야함 width: calc(100% - 492px); */
     }
@@ -47,6 +344,21 @@
         height: 30px;
         border-radius: 100%;
     }
+
+    #toggle-btn {
+        border: 0 !important;
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 50%;
+        right: -23px;
+        z-index: 9999;
+    }
+
+    .d-flex:has(#toggle-btn) {
+        position: relative;
+    }
+
 </style>
 
 
@@ -229,6 +541,10 @@
 
         <!--장소담기-->
         <div class="d-flex flex-column align-items-stretch bg-white" style="width: 380px;">
+
+            <button id="toggle-btn" class="bg-white text-center" type="button" onclick="toggleDay(this);">
+                <i class="bi bi-caret-left-fill"></i>
+            </button>
             <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                 <p class="fs-5 fw-semibold">DAY1</p>
             </a>
@@ -254,36 +570,19 @@
 
 
         <!--지도가 들어갑니다. 영역 알아보기 쉬우라고 bg-dark 클래스를 줬습니다. 실제로 쓸 땐 빼면 됩니다.-->
-        <div class="d-flex test bg-dark">
-            <p class="text-white">여기는 지도가? 들어가겟죵?</p>
+        <div id="map" class="d-flex show">
+            <p id="result"></p>
+<!--            <p class="text-white">여기는 지도가? 들어가겟죵?</p>-->
+            <div id="map_div">
+            </div>
+
+
+<!--            <div id="map_wrap" class="map_wrap">-->
+<!--                <div id="map_div"></div>-->
+<!--            </div>-->
         </div>
     </div>
 
 </div>
-
-
-
-
-<!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
-
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    // 아이콘 누르면 장소 담기에 추가하는 함수
-    $(document).ready(function() {
-        $('.plus').click(function() {
-            const areaname = $(this).prev('strong').text();
-            console.log(areaname);
-            $("#areabox").append("<a href='#' class='list-group-item list-group-item-action py-3 lh-tight' aria-current='true'> <div class='d-flex w-100 align-items-center justify-content-between'> <strong class='mb-1'>" + areaname + "</strong> <button class='delete' type='button' onclick='deleteRow(this);'><i class='bi bi-x-circle'></i></button> </div> </a>")
-        })
-    })
-
-    function deleteRow(ths) {
-        var ths = $(ths);
-        ths.closest("a").remove();
-    }
-</script>
-
 </body>
 </html>
