240123 가입이 무조건 돼요. 왜그럴까요? 그리고 비밀번호 유효성검사가 되다 말다 해요 왤까요?

--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -71,7 +71,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">작성자</label>
             <div class="col-sm-10">
-                <input type="text" name="u_name" class="form-control form-control-sm" th:value="${board.userName}" />
+                <input type="text" id="u_name" name="u_name" class="form-control form-control-sm" th:value="${board.userName}" />
             </div>
         </div>
         +
