--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -29,261 +29,184 @@
         initTmap();
     })
 
-    // tmap api
     var map;
+    var marker_s, marekr_e;
 
-    var marker_s, marekr_e, waypoint;
-    var resultMarkerArr = [];
     //경로그림정보
     var drawInfoArr = [];
-    var resultInfoArr = [];
+
 
     function initTmap(){
-        resultMarkerArr = [];
-
         // 1. 지도 띄우기
         map = new Tmapv2.Map("map_div", {
-            center: new Tmapv2.LatLng(37.405278291509404, 127.12074279785197),
+            center: new Tmapv2.LatLng(37.56701114710962, 126.9973611831669),
             width : "100%",
-            height : "100%",
-            zoom : 14,
+            height : "400px",
+            zoom : 15,
             zoomControl : true,
             scrollwheel : true
-
         });
 
-        // 2. 시작, 도착 심볼찍기
+        // 시작, 도착 심볼찍기
         // 시작
         marker_s = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.402688, 127.103259),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_s.png",
+            position : new Tmapv2.LatLng(37.568085523663385, 126.98605733268329),
+            icon : "/upload/tmap/marker/pin_r_m_s.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker_s);
+
         // 도착
         marker_e = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.414382, 127.142571),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_e.png",
+            position : new Tmapv2.LatLng(37.56445848334345, 127.00973587385866),
+            icon : "/upload/tmap/marker/pin_r_m_e.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker_e);
-
-        // 3. 경유지 심볼 찍기
-        marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.399569, 127.103790),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_1.png",
-            iconSize : new Tmapv2.Size(24, 38),
-            map:map
-        });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.402748, 127.108913),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_2.png",
+            position : new Tmapv2.LatLng(37.56626352138058, 126.98735015742581),
+            icon : "/upload/tmap/marker/pin_b_m_1.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.397153, 127.113403),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_3.png",
+            position : new Tmapv2.LatLng(37.56568310756034, 127.00221495976581),
+            icon : "/upload/tmap/marker/pin_b_m_2.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.410135, 127.121210),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_4.png",
+            position : new Tmapv2.LatLng(37.570369, 126.992153),
+            icon : "/upload/tmap/marker/pin_b_m_3.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.399400, 127.123296),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_5.png",
+            position : new Tmapv2.LatLng(37.56335290252303, 127.00352387777271),
+            icon : "/upload/tmap/marker/pin_b_m_4.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.406327, 127.130933),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_6.png",
+            position : new Tmapv2.LatLng(37.570721714117965, 127.00186090818215),
+            icon : "/upload/tmap/marker/pin_b_m_5.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
         marker = new Tmapv2.Marker({
-            position : new Tmapv2.LatLng(37.413227, 127.127337),
-            icon : "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_7.png",
+            position : new Tmapv2.LatLng(37.56515390827723, 126.99066536776698),
+            icon : "/upload/tmap/marker/pin_b_m_6.png",
             iconSize : new Tmapv2.Size(24, 38),
             map:map
         });
-        resultMarkerArr.push(marker);
 
-        // 4. 경로탐색 API 사용요청
-        var routeLayer;
-        $("#btn_select").click(function(){
+        var headers = {};
+        headers["appKey"]="aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf";
 
-            var searchOption = $("#selectLevel").val();
-
-            var headers = {};
-            headers["appKey"]="aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf";
-            headers["Content-Type"]="application/json";
-
-            var param = JSON.stringify({
-                "startName" : "출발지",
-                "startX" : "127.103259",
-                "startY" : "37.402688",
-                "startTime" : "201708081103",
-                "endName" : "도착지",
-                "endX" : "127.142571",
-                "endY" : "37.414382",
-                "viaPoints" :
-                    [
-                        {
-                            "viaPointId" : "test01",
-                            "viaPointName" : "name01",
-                            "viaX" : "127.103790" ,
-                            "viaY" : "37.399569"
-                        },
-                        {
-                            "viaPointId" : "test02",
-                            "viaPointName" : "name02",
-                            "viaX" : "127.108913" ,
-                            "viaY" : "37.402748"
-                        },
-                        {
-                            "viaPointId" : "test03",
-                            "viaPointName" : "name03",
-                            "viaX" : "127.113403" ,
-                            "viaY" : "37.397153"
-                        },
-                        {
-                            "viaPointId" : "test04",
-                            "viaPointName" : "name04",
-                            "viaX" : "127.121210" ,
-                            "viaY" : "37.410135"
-                        },
-                        {
-                            "viaPointId" : "test05",
-                            "viaPointName" : "name05",
-                            "viaX" : "127.123296" ,
-                            "viaY" : "37.399400"
-                        },
-                        {
-                            "viaPointId" : "test06",
-                            "viaPointName" : "name06",
-                            "viaX" : "127.130933" ,
-                            "viaY" : "37.406327"
-                        },
-                        {
-                            "viaPointId" : "test07",
-                            "viaPointName" : "name07",
-                            "viaX" : "127.127337" ,
-                            "viaY" : "37.413227"
-                        }
-                    ],
-                "reqCoordType" : "WGS84GEO",
+        $.ajax({
+            type:"POST",
+            headers : headers,
+            url:"https://apis.openapi.sk.com/tmap/routes/routeOptimization30?version=1&format=json",//
+            async:false,
+            contentType: "application/json",
+            data: JSON.stringify({
+                "reqCoordType": "WGS84GEO",
                 "resCoordType" : "EPSG3857",
-                "searchOption": searchOption
-            });
-
-            $.ajax({
-                method:"POST",
-                url:"https://apis.openapi.sk.com/tmap/routes/routeSequential30?version=1&format=json",//
-                headers : headers,
-                async:false,
-                data:param,
-                success:function(response){
-
-                    var resultData = response.properties;
-                    var resultFeatures = response.features;
-
-                    // 결과 출력
-                    var tDistance = "총 거리 : " + (resultData.totalDistance/1000).toFixed(1) + "km,  ";
-                    var tTime = "총 시간 : " + (resultData.totalTime/60).toFixed(0) + "분,  ";
-                    var tFare = "총 요금 : " + resultData.totalFare + "원";
-
-                    $("#result").text(tDistance+tTime+tFare);
-
-                    //기존  라인 초기화
-
-                    if(resultInfoArr.length>0){
-                        for(var i in resultInfoArr){
-                            resultInfoArr[i].setMap(null);
-                        }
-                        resultInfoArr=[];
+                "startName": "출발",
+                "startX": "126.98605733268329",
+                "startY": "37.568085523663385",
+                "startTime": "201711121314",
+                "endName": "도착",
+                "endX": "127.00973587385866",
+                "endY": "37.56445848334345",
+                "searchOption" : "0",
+                "viaPoints": [
+                    {
+                        "viaPointId": "test01",
+                        "viaPointName": "test01",
+                        "viaX": "126.98735015742581",
+                        "viaY": "37.56626352138058",
+                    },
+                    {
+                        "viaPointId": "test02",
+                        "viaPointName": "test02",
+                        "viaX": "127.00221495976581",
+                        "viaY": "37.56568310756034",
+                    },
+                    {
+                        "viaPointId": "test03",
+                        "viaPointName": "test03",
+                        "viaX": "126.992153",
+                        "viaY": "37.570369",
+                    },
+                    {
+                        "viaPointId": "test04",
+                        "viaPointName": "test04",
+                        "viaX": "127.00352387777271",
+                        "viaY": "37.56335290252303",
+                    },
+                    {
+                        "viaPointId": "test05",
+                        "viaPointName": "test05",
+                        "viaX": "127.00186090818215",
+                        "viaY": "37.570721714117965",
+                    },
+                    {
+                        "viaPointId": "test06",
+                        "viaPointName": "test06",
+                        "viaX": "126.99066536776698",
+                        "viaY": "37.56515390827723",
                     }
+                ]
+            }),
+            success:function(response){
+                var resultData = response.properties;
+                var resultFeatures = response.features;
 
-                    for(var i in resultFeatures) {
-                        var geometry = resultFeatures[i].geometry;
-                        var properties = resultFeatures[i].properties;
-                        var polyline_;
+                // 결과 출력
+                var tDistance = "총 거리 : " + (resultData.totalDistance/1000).toFixed(1) + "km,  ";
+                var tTime = "총 시간 : " + (resultData.totalTime/60).toFixed(0) + "분,  ";
+                var tFare = "총 요금 : " + resultData.totalFare + "원";
 
-                        drawInfoArr = [];
+                $("#result").text(tDistance+tTime+tFare);
 
-                        if(geometry.type == "LineString") {
-                            for(var j in geometry.coordinates){
-                                // 경로들의 결과값(구간)들을 포인트 객체로 변환
-                                var latlng = new Tmapv2.Point(geometry.coordinates[j][0], geometry.coordinates[j][1]);
-                                // 포인트 객체를 받아 좌표값으로 변환
-                                var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(latlng);
-                                // 포인트객체의 정보로 좌표값 변환 객체로 저장
-                                var convertChange = new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng);
+                for(var i in resultFeatures) {
+                    var geometry = resultFeatures[i].geometry;
+                    var properties = resultFeatures[i].properties;
+                    var polyline_;
 
-                                drawInfoArr.push(convertChange);
-                            }
+                    drawInfoArr = [];
 
-                            polyline_ = new Tmapv2.Polyline({
-                                path : drawInfoArr,
-                                strokeColor : "#FF0000",
-                                strokeWeight: 6,
-                                map : map
-                            });
-                            resultInfoArr.push(polyline_);
+                    if(geometry.type == "LineString") {
+                        for(var j in geometry.coordinates){
+                            // 경로들의 결과값(구간)들을 포인트 객체로 변환
+                            var latlng = new Tmapv2.Point(geometry.coordinates[j][0], geometry.coordinates[j][1]);
+                            // 포인트 객체를 받아 좌표값으로 변환
+                            var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(latlng);
+                            // 포인트객체의 정보로 좌표값 변환 객체로 저장
+                            var convertChange = new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng);
 
-                        }else{
-                            var markerImg = "";
-                            var size = "";			//아이콘 크기 설정합니다.
-
-                            if(properties.pointType == "S"){	//출발지 마커
-                                markerImg = "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_s.png";
-                                size = new Tmapv2.Size(24, 38);
-                            }else if(properties.pointType == "E"){	//도착지 마커
-                                markerImg = "https://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_e.png";
-                                size = new Tmapv2.Size(24, 38);
-                            }else{	//각 포인트 마커
-                                markerImg = "http://topopen.tmap.co.kr/imgs/point.png";
-                                size = new Tmapv2.Size(8, 8);
-                            }
-
-                            // 경로들의 결과값들을 포인트 객체로 변환
-                            var latlon = new Tmapv2.Point(geometry.coordinates[0], geometry.coordinates[1]);
-                            // 포인트 객체를 받아 좌표값으로 다시 변환
-                            var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(latlon);
-
-                            marker_p = new Tmapv2.Marker({
-                                position: new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng),
-                                icon : markerImg,
-                                iconSize : size,
-                                map:map
-                            });
-
-                            resultMarkerArr.push(marker_p);
+                            drawInfoArr.push(convertChange);
                         }
+
+                        polyline_ = new Tmapv2.Polyline({
+                            path : drawInfoArr,
+                            strokeColor : "#FF0000",
+                            strokeWeight: 6,
+                            map : map
+                        });
                     }
-                },
-                error:function(request,status,error){
-                    console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
                 }
-            });
+            },
+            error:function(request,status,error){
+                console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+            }
         });
     }
 
