db저장 메소드 일부 수정

--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -31,7 +31,7 @@
         })
 
         function checkCategory(){
-            let cat1 = $('input[name=cat1]:checked').val();
+            let cat1 = $("input[name='cat1']:checked").val();
             let url = `/info/cat/{${cat1}}`;
 
             $('.catSelect').click(function (){
